// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown Rendering disabled DropDown renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Ativo"
  >
    Ativo:
  </label>
  <select
    className="sc-htpNat eSoGCX"
    disabled={true}
    id="Ativo"
    name="Ativo"
  >
    <option
      value="WINM20"
    >
      WINM20
    </option>
    <option
      value="WDOM20"
    >
      WDOM20
    </option>
  </select>
</div>
`;

exports[`DropDown Rendering enabled DropDown renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Ativo"
  >
    Ativo:
  </label>
  <select
    className="sc-htpNat eSoGCX"
    id="Ativo"
    name="Ativo"
  >
    <option
      value="WINM20"
    >
      WINM20
    </option>
    <option
      value="WDOM20"
    >
      WDOM20
    </option>
  </select>
</div>
`;
